環境構築の確認: マイグレーション & シーディング完了

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -9,6 +9,14 @@ server {
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
+    location /storage/ {
+        alias /var/www/storage/app/public/;
+        autoindex on;
+        expires max;
+        access_log off;
+        add_header Cache-Control "public, no-transform";
+    }
+
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php:9000;
